Historial Medico Added

--- a/views/menus.xml
+++ b/views/menus.xml
@@ -25,5 +25,7 @@
         <menuitem id="menu_demografia" name="Demografia" parent="menu_principal_visitas_parametros" action="demografia_list_action" sequence="5"/>
         <menuitem id="menu_signos_vitales" name="Tipo Signos Vitales" parent="menu_principal_visitas_parametros" action="tipo_signo_vital_list_action" sequence="6"/>
         <menuitem id="menu_tipo_anticoncepcion" name="Tipo Anticoncepcion" parent="menu_principal_visitas_parametros" action="tipo_anticoncepcion_list_action" sequence="7"/>
+        <menuitem id="menu_enfermedades" name="Enfermedades" parent="menu_principal_visitas_parametros" action="enfermedades_list_action" sequence="8"/>
+
     </data>
 </odoo>
