--- a/views/visitas.xml
+++ b/views/visitas.xml
@@ -9,6 +9,8 @@
 
     </record>
 
+
+
     <record model="ir.ui.view" id="visitas_tree_view">
             <field name="name">Screening</field>
             <field name="model">mediges.visitas</field>
@@ -97,5 +99,20 @@
           </form>
         </field>
     </record>
+
+      <record model="ir.actions.act_window.view" id="visitas_screening_tree_view">
+        <field name="sequence" eval="1"/>
+        <field name="view_mode">tree</field>
+        <field name="view_id" ref="visitas_tree_view"/>
+        <field name="act_window_id" ref="visitas_list_action"/>
+    </record>
+
+      <record model="ir.actions.act_window.view" id="screening_form_view">
+        <field name="sequence" eval="2"/>
+        <field name="view_mode">form</field>
+        <field name="view_id" ref="visitas_form_view"/>
+        <field name="act_window_id" ref="visitas_list_action"/>
+     </record>
+
   </data>
 </odoo>
