--- a/views/menus.xml
+++ b/views/menus.xml
@@ -20,8 +20,8 @@
 
         <menuitem id="main_menu_protocolos" name="Protocolos" web_icon="protocolos,static/description/protocol.png" />
         <menuitem id="menu_principal_visitas" name="Visitas" parent="main_menu_protocolos" sequence="1"/>
-        <menuitem id="menu_visitas" name="Screening" parent="menu_principal_visitas" action="visitas_list_action" sequence="3"/>
-        <menuitem id="menu_visitas_rando" name="Randomizacion" parent="menu_principal_visitas" action="visitas_rando_list_action" sequence="4"/>
+        <menuitem id="menu_visitas" name="Visitas" parent="menu_principal_visitas" action="visitas_list_action" sequence="3"/>
+
 
 
         <menuitem id="menu_principal_visitas_parametros" name="Parametros" parent="main_menu_protocolos" sequence="4"/>
