--- a/views/visitas_rando.xml
+++ b/views/visitas_rando.xml
@@ -5,9 +5,6 @@
             <field name="name">Randomizacion</field>
             <field name="res_model">mediges.visitas</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{"default_tipo_visita": "RANDOMIZACION"}</field>
-            <field name="domain">[('tipo_visita','=','RANDOMIZACION')]</field>
-
     </record>
 
     <record model="ir.ui.view" id="visitas_rando_tree_view">
@@ -16,7 +13,6 @@
             <field name="arch" type="xml">
                 <tree string="Randomizacion">
                     <field name="paciente"/>
-                    <field name="tipo_visita"/>
                     <field name="create_uid" string="Creada por"/>
                     <field name="create_date" string="Creada el"/>
                     <field name="write_uid" string="Modificada por"/>
@@ -31,7 +27,7 @@
         <field name="arch" type="xml">
           <form string="Randomizacion">
             <header>
-                <field name="tipo_visita" widget="statusbar" string="Progreso"/>
+                <field name="tipo_visita_id" widget="statusbar" string="Progreso"/>
             </header>
             <sheet>
               <group string="Paciente">
