--- a/views/visitas.xml
+++ b/views/visitas.xml
@@ -3,6 +3,7 @@
     <record model="ir.actions.act_window" id="visitas_list_action">
             <field name="name">Visitas</field>
             <field name="res_model">mediges.visitas</field>
+            <field name="view_id" ref="visitas_calendar"/>
             <field name="view_mode">calendar,tree,form</field>
     </record>
 
@@ -51,14 +52,21 @@
                 <field name="criterios_exclusion" widget="radio"/>
                   <br/>
               </group>
-              <group string="Signos Vitales" attrs="{'invisible': [('tipo_visita_id','!=', 1)]}">
+              <group string="Criterios Exclusion" attrs="{'invisible': [('tipo_visita_id','!=', 1)
+               ,('tipo_visita_id', '!=', 2)]}">
+                <field name="criterios_exclusion" widget="radio"/>
+                <br/>
+              </group>
+
+              <group string="Signos Vitales" attrs="{'invisible': [('tipo_visita_id','!=', 1)
+               ,('tipo_visita_id', '!=', 2)]}">
                 <field name="estatura" placeholder="en cm."/>
                   <br/>
                 <field name="peso" placeholder="en kgs."/>
                   <br/>
                 <field name="imc"/>
                   <br/>
-                <field name="signos_vitales_id" >
+                <field name="signos_vitales_id"  >
                     <tree string="Signos Vitales" editable="bottom">
                         <field name="tipo_signo_vital"/>
 
@@ -68,15 +76,15 @@
                 </field>
                   <br/>
               </group>
-              <group string="Examen Fisico" attrs="{'invisible': [('tipo_visita_id','!=', 2)]}">
+              <group string="Examen Fisico" attrs="{'invisible': [('tipo_visita_id','!=', 1)]}">
                 <field name="visitas_indicadores_id"/>
               </group>
-              <group string="COVID">
+              <group string="COVID" attrs="{'invisible': [('tipo_visita_id','!=', 1)]}">
                   <field name="covid" widget="radio"/>
                    <br/>
                   <field name="examen_covid" widget="radio"/>
               </group>
-              <group string="Riesgo de embarazo">
+              <group string="Riesgo de embarazo" attrs="{'invisible': [('tipo_visita_id','!=', 1)]}">
                   <field name="prueba_embaraso" widget="radio"/>
                   <br/>
                   <field name="edad_fertil" widget="radio"/>
@@ -90,9 +98,49 @@
                     </tree>
                   </field>
               </group>
-              <group string="Historial Medico">
+              <group string="Historial Medico" attrs="{'invisible': [('tipo_visita_id','!=', 1)]}">
                   <field name="enfermedades_id"/>
               </group>
+                <!-- BEGIN RANDO  -->
+              <group string="Cuestionario" attrs="{'invisible': [('tipo_visita_id','!=', 2)]}">
+                  <br/>
+                  <field name="cuestionario_de_mru" widget="radio"/>
+                  <br/>
+                  <field name="sintomas_previos" widget="radio"/>
+                  <br/>
+                  <field name="numero_kit_rando" />
+                  <br/>
+                  <field name="muestra_sangre_arnsec" widget="radio"/>
+                  <br/>
+                  <field name="muestras_nasales_sars" widget="radio"/>
+                  <br/>
+                  <field name="capacitacion_ecoa" widget="radio"/>
+                  <br/>
+                  <field name="formulario_macov" widget="radio"/>
+                  <br/>
+                  <field name="entrega_kit_hisopado_nasal" widget="radio"/>
+                  <br/>
+                  <field name="sintomas_covid" widget="radio"/>
+                  <br/>
+                  <field name="vigilancia_sintomas_covid" widget="radio"/>
+                  <br/>
+                  <field name="inmunogenia_humoral" widget="radio"/>
+              </group>
+              <group string="Vacunación" attrs="{'invisible': [('tipo_visita_id','!=', 2)]}">
+                  <br/>
+                  <field name="sintomas_vacunacion" widget="radio"/>
+                  <br/>
+                  <field name="fecha_vacunacion"/>
+                  <br/>
+                  <field name="sitio_vacunacion_id"/>
+                  <br/>
+                  <field name="reaccion_vacunacion_id" widget="many2many_tags" />
+                  <br/>
+                  <field name="observacion_vacunacion" widget="radio"/>
+
+              </group>
+            <!-- END RANDO  -->
+
             </sheet>
             <div class="oe_chatter">
                 <field name="message_follower_ids" widget="mail_followers"/>
