--- a/views/visitas.xml
+++ b/views/visitas.xml
@@ -4,10 +4,9 @@
     <record id="visitas_calendar" model="ir.ui.view">
             <field name="name">Visita</field>
             <field name="model">mediges.visitas</field>
-            <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <calendar string="Visitas" date_start="fecha_visita_inicio" date_stop="fecha_visita_termino"
-                color="tipo_visita_id">
+                color="tipo_visita_id" quick_add="False">
                     <field name="paciente"/>
                     <field name="tipo_visita_id"/>
 
@@ -18,10 +17,9 @@
     <record model="ir.actions.act_window" id="visitas_list_action">
             <field name="name">Visitas</field>
             <field name="res_model">mediges.visitas</field>
-            <field name="view_id" ref="visitas_calendar"/>
             <field name="view_mode">calendar,tree,form</field>
+            <field name="view_id" ref="visitas_calendar"/>
     </record>
-
     <record model="ir.ui.view" id="visitas_tree_view">
             <field name="name">Screening</field>
             <field name="model">mediges.visitas</field>
@@ -54,7 +52,6 @@
               <group string="Visita">
                 <field name="tipo_visita_id"/>
                 <field name="fecha_visita_inicio"/>
-                <field name="fecha_visita_termino"/>
                 <br/>
               </group>
               <group string="Consentimiento" attrs="{'invisible': [('tipo_visita_id','!=', 1)]}">
@@ -164,22 +161,6 @@
           </form>
         </field>
     </record>
-
-
-
-      <record model="ir.actions.act_window.view" id="visitas_screening_tree_view">
-        <field name="sequence" eval="1"/>
-        <field name="view_mode">tree</field>
-        <field name="view_id" ref="visitas_tree_view"/>
-        <field name="act_window_id" ref="visitas_list_action"/>
-    </record>
-
-      <record model="ir.actions.act_window.view" id="screening_form_view">
-        <field name="sequence" eval="2"/>
-        <field name="view_mode">form</field>
-        <field name="view_id" ref="visitas_form_view"/>
-        <field name="act_window_id" ref="visitas_list_action"/>
-     </record>
 
   </data>
 </odoo>
